--- a/dbExample/public/index.html
+++ b/dbExample/public/index.html
@@ -14,8 +14,6 @@
   }
 function start()
 {
-  x();
-  setInterval("x()", 1000);
 }
 
 </script>
@@ -23,7 +21,10 @@ function start()
 </head>
 
 <body onload='start()'>
-<h1> TEST </h1>
+<h1> Sensor Data </h1>
+
+<input type='date' id='dateInput'>
+<input type='time' id='timeInput'>
 
 <div id='results'> </div>
 
