--- a/dbExample/public/index.html
+++ b/dbExample/public/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.css" />
 <script src="asyncReq.js"> </script>
 <script>
 function format2(n){
@@ -9,7 +12,7 @@ function format2(n){
 
 function getDateInFormat(dObj)
 {
-  document.getElementById("dateInput").value = dObj.getFullYear() + "-" + format2(dObj.getMonth()) + "-" + format2(dObj.getDate())
+  document.getElementById("dateInput").value = dObj.getFullYear() + "-" + format2(dObj.getMonth() + 1) + "-" + format2(dObj.getDate())
 }
 
 function getTimeInFormat(dObj)
@@ -20,11 +23,40 @@ function getTimeInFormat(dObj)
 var buildGraph = function(){
   var to =  new Date(document.getElementById("dateInput").value + " " + document.getElementById("timeInput").value).getTime();
   var from = to - (parseInt(document.getElementById("timeSelect").value) * 60 * 1000);
+  console.log(new Date(from), new Date(to));
+  var url = "./getDataInRange?to="+ to + "&from=" + from
+  console.log(url);
 
-  loadFile("./getDataInRange?to="+ to + "&from=" + from, function(data){
+  loadFile(url, function(data){
     var obj = JSON.parse(data);
     console.log(obj);
+    var cols = [
+      ["Light"],
+      ["Humidity"],
+      ["Temperature"]
+    ];
+    for(var i = 0; i < obj.length; i++){
+      if(obj[i].light && obj[i].temp && obj[i].humidity){
+        cols[0].push(obj[i].light);
+        cols[1].push(obj[i].humidity);
+        cols[2].push(obj[i].temp);
+      }
+    };
+
+    console.log(cols);
+    var chart = c3.generate({
+        bindto: '#results',
+        data: {
+          columns: cols
+       }
+    });
   });
+
+}
+
+function valuesChanged()
+{
+    buildGraph();
 }
 
 function start()
@@ -41,16 +73,18 @@ function start()
 <body onload='start()'>
 <h1> Sensor Data </h1>
 
-<input type='date' id='dateInput'>
-<input type='time' id='timeInput'>
+<input onchange='valuesChanged()' type='date' id='dateInput'>
+<input onchange='valuesChanged()' type='time' id='timeInput'>
 
-<select id='timeSelect'>
+<select onchange='valuesChanged()' id='timeSelect'>
   <option value='5'> last 5 min </option>
   <option value='10'> last 10 min </option>
   <option value='15'> last 15 min </option>
   <option value='30'> last 30 min </option>
   <option value='60'> last 1 hour </option>
 </select>
+
+<button onclick='buildGraph()'> Refresh </button>
 
 <div id='results'> </div>
 
