--- a/ASSIGNMENTS/6/handout/public/index.html
+++ b/ASSIGNMENTS/6/handout/public/index.html
@@ -4,6 +4,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.css" />
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.js"></script>
+    <link rel="stylesheet" media="all" type="text/css" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css" />
 <script src="asyncReq.js"> </script>
 <script>
 function format2(n){
@@ -73,8 +77,8 @@ function start()
 <body onload='start()'>
 <h1> Sensor Data </h1>
 
-<input onchange='valuesChanged()' type='date' id='dateInput'>
-<input onchange='valuesChanged()' type='time' id='timeInput'>
+<input onchange='valuesChanged()' type='text' id='dateInput'>
+<input onchange='valuesChanged()' type='text' id='timeInput'>
 
 <select onchange='valuesChanged()' id='timeSelect'>
   <option value='5'> last 5 min </option>
